# OmniAGP

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  justfile  omnigp.toml.example
.github/workflows/: ci.yml
agents/: README.md
agents/asset_director/: Dockerfile  __init__.py  __main__.py  director.py  requirements.txt  server.py
crates/omni-assets/: Cargo.toml
crates/omni-assets/src/: audio.rs  director.rs  generator.rs  lib.rs  pipeline_2d.rs
crates/omni-auth/: Cargo.toml
crates/omni-auth/src/: lib.rs
crates/omni-collaboration/: Cargo.toml
crates/omni-collaboration/src/: lib.rs
crates/omni-core/: Cargo.toml
crates/omni-core/src/: error.rs  lib.rs  scheduler.rs
crates/omni-designer/: Cargo.toml
crates/omni-designer/src/: agent.rs  codegen_tasks.rs  lib.rs  schema.rs  validation.rs
crates/omni-designer/tests/: integration_test.rs
crates/omni-fixer/: Cargo.toml
crates/omni-fixer/src/: agent.rs  lib.rs  tests.rs  types.rs
crates/omni-fixer/src/strategies/: asset_missing.rs  code_bug.rs  design_flaw.rs  mod.rs  performance.rs
crates/omni-godot/: Cargo.toml
crates/omni-godot/src/: codegen.rs  lib.rs  project.rs
crates/omni-llm/: Cargo.toml
crates/omni-llm/src/: client.rs  lib.rs  types.rs
crates/omni-marketplace/: Cargo.toml
crates/omni-marketplace/src/: asset_pack.rs  community.rs  lib.rs  license.rs  search.rs  store.rs  version.rs
crates/omni-notify/: Cargo.toml
crates/omni-notify/src/: lib.rs
crates/omni-orchestrator/: Cargo.toml
crates/omni-orchestrator/src/: blackboard.rs  coordinator.rs  dag.rs  degradation.rs  event_bus.rs  integration.rs  lib.rs  pipeline.rs  state_machine.rs
crates/omni-plugin/: Cargo.toml
crates/omni-plugin/src/: config.rs  lib.rs  lifecycle.rs  manifest.rs  registry.rs  sandbox.rs  traits.rs
crates/omni-publish/: Cargo.toml
crates/omni-publish/src/: lib.rs
crates/omni-qa/: Cargo.toml
crates/omni-qa/src/: agent.rs  bug_report.rs  lib.rs  report.rs  runner.rs
crates/omni-qa/src/tests/: asset_integrity.rs  mechanic.rs  mod.rs  navigation.rs  performance.rs  smoke.rs
crates/omni-rag/: Cargo.toml
crates/omni-rag/src/: embedding.rs  lib.rs  qdrant.rs  retriever.rs  templates.rs
crates/omni-scheduler/: Cargo.toml
crates/omni-scheduler/src/: autoscaler.rs  billing.rs  lib.rs  metrics.rs  node_manager.rs  queue.rs  strategy.rs
crates/omni-templates/: Cargo.toml
crates/omni-templates/src/: builtin.rs  engine.rs  lib.rs  types.rs
crates/omni-workflow/: Cargo.toml
crates/omni-workflow/src/: lib.rs
crates/omnigp-cli/: Cargo.toml
crates/omnigp-cli/src/: checkpoint.rs  cli.rs  config.rs  export.rs  main.rs  pipeline.rs  progress.rs  report.rs
docker/: Dockerfile.api-gateway  Dockerfile.collaboration-server  Dockerfile.scheduler  Dockerfile.worker  docker-compose.2d.yml  docker-compose.yml  prometheus.yml
docker/grafana/dashboards/: dashboard.yml
docs/: README.md  plugin-sdk.md
examples/plugin-cyberpunk-style/: Cargo.toml
examples/plugin-cyberpunk-style/src/: main.rs
examples/plugin-retro-exporter/: Cargo.toml
examples/plugin-retro-exporter/src/: main.rs
examples/plugin-terrain-generator/: Cargo.toml
examples/plugin-terrain-generator/src/: main.rs
k8s/: deployment.yaml
orchestrator/: Cargo.toml
orchestrator/src/: main.rs
pipelines/: README.md
pipelines/asset-2d/: Dockerfile  README.md  main.py  requirements.txt  test_main.py
pipelines/asset-2d/workflows/: anime.json  pixel.json  realistic.json
pipelines/audio/: Dockerfile  __init__.py  __main__.py  config.py  generator.py  postprocess.py  requirements.txt  server.py
pipelines/pipeline_3d/: Dockerfile  README.md  pytest.ini  requirements.txt
pipelines/pipeline_3d/src/: config.py  main.py  models.py  pipeline.py
pipelines/pipeline_3d/tests/: test_api.py  test_fallback.py  test_pipeline.py
rag/: index_knowledge.py  requirements.txt
runtime/: Cargo.toml
sdk/python/: README.md  pyproject.toml
sdk/python/omniagp_plugin/: __init__.py  _runner.py  protocol.py  registry.py  sandbox.py
services/api-gateway/: Cargo.toml
services/api-gateway/src/: auth.rs  lib.rs  main.rs  projects.rs  state.rs  static_files.rs  users.rs  websocket.rs
services/asset-sidecar/: .gitignore  Dockerfile  requirements-dev.txt
services/asset-sidecar/app/: __main__.py  config.py  main.py  models.py  queue.py
services/asset-sidecar/tests/: test_api.py
services/collaboration-server/: Cargo.toml
services/collaboration-server/src/: main.rs
services/marketplace/: Cargo.toml
services/marketplace/src/: main.rs
services/scheduler/: Cargo.toml
services/scheduler/src/: main.rs
services/worker/: Cargo.toml
services/worker/src/: executor.rs  gpu.rs  main.rs
templates/: README.md
templates/idle-clicker/: gdd_template.json  template.toml
templates/idle-clicker/scripts/: idle_engine.gd  prestige.gd  upgrade_system.gd
templates/platformer-2d/: gdd_template.json  template.toml
templates/platformer-2d/scripts/: level_generator.gd  player_controller.gd
templates/puzzle-game/: gdd_template.json  template.toml
templates/puzzle-game/scripts/: grid_manager.gd  level_progression.gd
templates/topdown-shooter/: gdd_template.json  template.toml
templates/topdown-shooter/scripts/: player_controller.gd  wave_spawner.gd
templates/visual-novel/: gdd_template.json  template.toml
templates/visual-novel/scripts/: dialogue_system.gd  story_manager.gd
tests/e2e/: package-lock.json  package.json  playwright.config.ts
tests/e2e/specs/: 02-auth.spec.ts
tests/smoke/: Cargo.toml  run.bat  run.sh
tests/smoke/src/: game_spec.rs  godot_project.rs  headless_qa.rs  main.rs  metrics.rs  mock_services.rs  packager.rs  pipeline_runner.rs
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx
web/src/api/: client.ts
web/src/components/: Layout.tsx  PipelineDAG.tsx
web/src/hooks/: useWebSocket.ts
web/src/pages/: ConfigPage.tsx  LoginPage.tsx  NewProjectPage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx  RegisterPage.tsx
web/src/stores/: auth.ts
(+24 files in other folders)
