[workspace]
members = [
    "crates/omni-core",
    "crates/omni-orchestrator",
    "crates/omni-llm",
    "crates/omni-assets",
    "crates/omni-godot",
    "crates/omni-rag",
    "crates/omni-collaboration",
    "crates/omni-workflow",
    "crates/omni-auth",
    "crates/omni-notify",
    "crates/omni-publish",
    "services/api-gateway",
    "services/worker",
    "services/collaboration-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Qbuby/OmniAGP"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
axum = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
async-trait = "0.1"
