[workspace]
members = [
    "crates/omni-core",
    "crates/omni-orchestrator",
    "crates/omni-llm",
    "crates/omni-assets",
    "crates/omni-godot",
    "crates/omni-rag",
    "crates/omni-designer",
    "crates/omni-qa",
    "crates/omni-fixer",
    "crates/omnigp-cli",
    "orchestrator",
    "services/api-gateway",
    "services/worker",
    "tests/smoke",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Qbuby/OmniAGP"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
axum = { version = "0.8", features = ["ws"] }
uuid = { version = "1", features = ["v4", "serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
petgraph = "0.6"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
console = "0.15"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
