[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
omni-orchestrator = { path = "../crates/omni-orchestrator" }
omni-llm = { path = "../crates/omni-llm" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
