[package]
name = "omni-auth"
description = "RBAC permission system with project-level access control and audit logging"
version.workspace = true
edition.workspace = true

[dependencies]
omni-core = { path = "../omni-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
