[package]
name = "omni-notify"
description = "Event bus with notification adapters for Slack, Discord, Email, and RSS/Atom"
version.workspace = true
edition.workspace = true

[dependencies]
omni-core = { path = "../omni-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
