[package]
name = "omni-orchestrator"
description = "Agent orchestration engine — manages multi-step game generation pipelines"
version.workspace = true
edition.workspace = true

[dependencies]
omni-core = { path = "../omni-core" }
omni-llm = { path = "../omni-llm" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
