[package]
name = "omni-scheduler"
description = "Distributed task scheduler with GPU-aware routing and elastic scaling"
version.workspace = true
edition.workspace = true

[dependencies]
omni-core = { path = "../omni-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
async-nats = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
prometheus = { workspace = true }
futures = { workspace = true }
