[package]
name = "omnigp"
description = "Production CLI for OmniAGP — one-command game generation from text descriptions"
version.workspace = true
edition.workspace = true

[[bin]]
name = "omnigp"
path = "src/main.rs"

[dependencies]
omni-core = { path = "../omni-core" }
omni-llm = { path = "../omni-llm" }
omni-godot = { path = "../omni-godot" }
omni-assets = { path = "../omni-assets" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
