[project]
name = "omniagp-plugin"
version = "0.1.0"
description = "OmniAGP Plugin SDK for Python — build custom plugins for the OmniAGP game generation platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "mypy>=1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["omniagp_plugin"]
