[package]
name = "omni-api-gateway"
description = "HTTP API gateway — accepts game generation requests"
version.workspace = true
edition.workspace = true

[dependencies]
omni-core = { path = "../../crates/omni-core" }
omni-orchestrator = { path = "../../crates/omni-orchestrator" }
omni-llm = { path = "../../crates/omni-llm" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
