[package]
name = "omni-api-gateway"
description = "HTTP API gateway — accepts game generation requests and serves web dashboard"
version.workspace = true
edition.workspace = true

[dependencies]
omni-core = { path = "../../crates/omni-core" }
omni-orchestrator = { path = "../../crates/omni-orchestrator" }
omni-llm = { path = "../../crates/omni-llm" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
axum-extra = { version = "0.10", features = ["typed-header"] }
uuid = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "compression-gzip"] }
jsonwebtoken = "9"
oauth2 = "5"
chrono = { version = "0.4", features = ["serde"] }
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"
dashmap = "6"
futures = "0.3"
tokio-stream = "0.1"
reqwest = { workspace = true }
