[package]
name = "omni-api-gateway"
description = "HTTP API gateway — accepts game generation requests and serves web dashboard"
version.workspace = true
edition.workspace = true

[dependencies]
omni-core = { path = "../../crates/omni-core" }
omni-orchestrator = { path = "../../crates/omni-orchestrator" }
omni-assets = { path = "../../crates/omni-assets" }
omni-llm = { path = "../../crates/omni-llm" }
omni-scheduler = { path = "../../crates/omni-scheduler" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
axum-extra = { version = "0.10", features = ["typed-header"] }
uuid = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "compression-gzip"] }
jsonwebtoken = "9"
oauth2 = "5"
chrono = { workspace = true }
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"
dashmap = { workspace = true }
futures = { workspace = true }
tokio-stream = "0.1"
reqwest = { workspace = true }
async-nats = { workspace = true }
rusqlite = { workspace = true }
bcrypt = "0.15"
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
