[package]
name = "omni-collaboration-server"
description = "WebSocket server for real-time GDD collaboration"
version.workspace = true
edition.workspace = true

[dependencies]
omni-core = { path = "../../crates/omni-core" }
omni-collaboration = { path = "../../crates/omni-collaboration" }
omni-workflow = { path = "../../crates/omni-workflow" }
omni-auth = { path = "../../crates/omni-auth" }
omni-notify = { path = "../../crates/omni-notify" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true, features = ["ws"] }
uuid = { workspace = true }
chrono = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
