[package]
name = "omni-scheduler-service"
description = "Scheduler service — dispatches tasks to GPU workers"
version.workspace = true
edition.workspace = true

[dependencies]
omni-core = { path = "../../crates/omni-core" }
omni-scheduler = { path = "../../crates/omni-scheduler" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
prometheus = "0.13"
